# SDL_Experiments

./: CMakeLists.txt  README.md  err_macro.h  format_and_build.sh  format_code.sh
common_inc/: err_macro.h
key_mouse_control/: CMakeLists.txt  key_mouse_control.c
simple_triangle/: CMakeLists.txt  simple_trinagle.c
